[gd_scene load_steps=11 format=2]

[ext_resource path="res://chicken.png" type="Texture" id=1]
[ext_resource path="res://chicken.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "eating",
"speed": 6.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 5.0

[node name="chicken" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "walking"
frame = 2
playing = true

[node name="change_state_timer" type="Timer" parent="."]
autostart = true

[node name="walking_timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 8 )

[connection signal="timeout" from="change_state_timer" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="walking_timer" to="." method="_on_walking_timer_timeout"]
